<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:orientation="vertical"
tools:context=".ui.kelas.integration.SubDetailKelas.InfoSubDetailKelasActivity">

<com.google.android.material.card.MaterialCardView
    android:layout_width="match_parent"
    android:layout_height="270dp"
    android:layout_marginTop="60dp"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    app:cardCornerRadius="25dp"
    app:cardElevation="50dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_kelas"
            android:textStyle="bold"
            android:paddingLeft="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            />
        <Spinner
            android:id="@+id/editSpSubKelas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:paddingLeft="15dp"
            android:minHeight="48dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_peserta"
            android:textStyle="bold"
            android:paddingLeft="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            />
        <Spinner
            android:id="@+id/editSpSubPeserta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:paddingLeft="15dp"
            android:minHeight="48dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnUpdateDataSubKelas"
                android:layout_width="185dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="5dp"
                android:text="@string/btn_update_data"
                android:backgroundTint="@color/green"
                app:cornerRadius="25dp"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDeleteDataSubKelas"
                android:layout_width="185dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="5dp"
                android:backgroundTint="@color/red"
                android:text="@string/btn_delete_data"
                app:cornerRadius="25dp" />

        </LinearLayout>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
</LinearLayout>