<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.instruktur.integration.DetailInstrukturActivity">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="430dp"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="50dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/datesFormatStartKelas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_margin="12dp"
                app:boxBackgroundMode="none"
                android:minHeight="48dp" >

                <EditText
                    android:id="@+id/datesStartKelas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Entry Date"
                    android:inputType="date"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/datesFormatEndKelas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_margin="12dp"
                android:inputType="date"
                app:boxBackgroundMode="none"
                android:minHeight="48dp" >

                <EditText
                    android:id="@+id/datesEndKelas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="End Date"
                    android:inputType="date"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_instruktur"
                android:textStyle="bold"
                android:paddingLeft="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                />
            <Spinner
                android:id="@+id/editSpInstrukturNames"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:paddingLeft="15dp"
                android:minHeight="48dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_materi"
                android:textStyle="bold"
                android:paddingLeft="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                />
            <Spinner
                android:id="@+id/editSpMateriNames"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:paddingLeft="15dp"
                android:minHeight="48dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnUpdateDatasKelas"
                    android:layout_width="185dp"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/btn_update_data"
                    android:backgroundTint="@color/green"
                    app:cornerRadius="25dp"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnDeleteDatasKelas"
                    android:layout_width="185dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="5dp"
                    android:backgroundTint="@color/red"
                    android:text="@string/btn_delete_data"
                    app:cornerRadius="25dp" />

            </LinearLayout>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>